--- a/templates/delete_form.html
+++ b/templates/delete_form.html
@@ -4,17 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insert Form</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #333;
+        }
+        h4 {
+            font-size: smaller;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background-color: #e8e7e7;
+        }
+        .form-group {
+            margin-bottom: 15px;
+            margin-right: 10px;
+            display: inline-block;
+            width: 15%; /* Adjust width as needed */
+        }
+        .form-group label {
+            display: block;
+            font-weight: bold;
+        }
+        .form-group input[type="text"] {
+            width: calc(100% - 10px);
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-top: 5px;
+        }
+        .form-group:after {
+            content: '';
+            display: block;
+            clear: both;
+        }
+        .alert {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #f8d7da;
+            border: 1px solid #f5c6cb;
+            color: #721c24;
+            border-radius: 4px;
+        }
+        #tablecontainer{
+            max-height: 500px; /* Set the maximum height */
+            overflow: auto;
+            /* padding: 5px; */
+            border: 1px solid black;
+            border-radius: 15px;
+
+            /* max-width: 1300px; */
+            margin: 0 auto;
+            padding: 20px;
+        }
+        /* Style the scrollbar track */
+        #tablecontainer::-webkit-scrollbar {
+            width: 8px; /* Width of the scrollbar */
+        }
+
+        /* Style the scrollbar thumb */
+        #tablecontainer::-webkit-scrollbar-thumb {
+            background-color: #3399a9; /* Color of the scrollbar thumb */
+            border-radius: 5px; /* Rounded corners */
+        }
+
+        /* Style the scrollbar track when mouse is hovering over it */
+        #tablecontainer::-webkit-scrollbar-track:hover {
+            background-color: #ddd; /* Change color on hover */
+        }
+        .btn {
+            background-color: #1b78dc;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-right: 10px;
+            margin-left: 10px;
+            font-size: 16px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
+        .btn:active {
+            transform: translateY(1px);
+            box-shadow: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Delete Values in Table: {{ table_name }}</h1>
+    <h1>Delete Values from {{ table_name }}</h1>
     <form action="/delete-values2" method="post">
-        <div>
-            <label for="whereCondition">WHERE condition:</label>
+        <div class="form-group">
+            <label for="whereCondition">Condition:</label>
             <input type="text" id="whereCondition" name="whereCondition">
         </div>
 
         <input type="hidden" name="tableName" value="{{ table_name }}">
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn">Submit</button>
     </form>
+    <h1>Table: {{ table_name }}</h1>
+    <div id="tablecontainer">
+        <table>
+            <thead>
+                <tr>
+                    {% for column in columns %}
+                        <th>{{ column[0] }}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in values %}
+                    <tr>
+                        {% for value in row %}
+                            <td>{{ value }}</td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    <img src="../static/images/logo.png" alt="Moon Macrosystems Logo" style="position: relative; left: 50%; transform: translateX(-50%); width: 170px; height: auto;">
+
 </body>
 </html>
